--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>UrutiWeb</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="./assets/images/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#1f1f1f" />
+    <meta name="title" content="Uruti Hub - Forward Together" />
+    <meta
+      name="description"
+      content="Uruti Hub limited is a software company limited aiming at providing the best software solutions in Rwanda and beyond."
+    />
+    <meta name="keywords" content="Uruti Hub, Uruti, Hub, forward, together" />
+    <meta name="author" content="David KUBWIMANA" />
+    <link rel="apple-touch-icon" href="./assets/images/logo.svg" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://urutihub.com/" />
+    <meta property="og:site_name" content="Uruti Hub" />
+    <meta property="article:publisher" content="Forward Together" />
+    <meta property="og:title" content="Uruti Hub - Forward Together" />
+    <meta
+      property="og:description"
+      content="Uruti Hub limited is a software company limited aiming at providing the best software solutions in Rwanda and beyond."
+    />
+    <meta property="og:image" content="/images/preview.png" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://urutihub.com/" />
+    <meta property="twitter:title" content="Uruti Hub - Forward Together" />
+    <meta
+      property="twitter:description"
+      content="Uruti Hub limited is a software company limited aiming at providing the best software solutions in Rwanda and beyond."
+    />
+    <meta property="twitter:image" content="/images/preview.png" />
+    <meta name="twitter:creator" content="@aimelive_1" />
+
+    <title>Uruti Hub</title>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
