--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       property="og:description"
       content="Uruti Hub limited is a software company limited aiming at providing the best software solutions in Rwanda and beyond."
     />
-    <meta property="og:image" content="/images/preview.png" />
+    <meta property="og:image" content="./assets/images/preview.png" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://urutihub.com/" />
@@ -33,7 +33,7 @@
       property="twitter:description"
       content="Uruti Hub limited is a software company limited aiming at providing the best software solutions in Rwanda and beyond."
     />
-    <meta property="twitter:image" content="/images/preview.png" />
+    <meta property="twitter:image" content="./assets/images/preview.png" />
     <meta name="twitter:creator" content="@aimelive_1" />
 
     <title>Uruti Hub</title>
